<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:id="@+id/textViewDialogTitle"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_marginEnd="10dp" />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame"
            android:paddingBottom="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextWhat"
                android:hint="@string/category"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:singleLine="true" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:id="@+id/spinnerWhat"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown"
                android:focusable="true"
                android:visibility="visible"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="10dp"/>
        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="viewStart"
            android:id="@+id/editTextAmount"
            android:hint="@string/how_much" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextWhere"
            android:hint="@string/where"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextComment"
            android:hint="@string/comments"
            android:singleLine="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout"
            android:layoutDirection="ltr">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_expense_cancel"
                android:id="@+id/buttonDialogCancel"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_expense_save"
                android:id="@+id/buttonDialogOk"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>